# novel-tui

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/novel_tui/: __init__.py  __main__.py  app.py
src/novel_tui/core/: parser.py  reader.py  search.py
src/novel_tui/db/: connection.py  models.py  repository.py
src/novel_tui/screens/: add_book.py  book_list.py  reading.py
src/novel_tui/styles/: app.tcss  book_list.tcss  colors.tcss  reading.tcss
src/novel_tui/widgets/: book_table.py  chapter_sidebar.py  content_view.py  file_picker.py  search_bar.py  status_bar.py
tests/: sample_novel.txt  test_parser.py  test_reader.py  test_repository.py  test_search.py
